fix(rma-frontend): remove missing property
column property removed from edit-days component

--- a/packages/rma-frontend/src/app/sales-ui/item-price/edit-days/edit-days.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/item-price/edit-days/edit-days.component.html
@@ -1,5 +1,7 @@
 <form (ngSubmit)="onSubmit()">
-  <div class="mat-subheading-2" class="ion-text-capitalize">{{ column }}</div>
+  <div class="mat-subheading-2" class="ion-text-capitalize">
+    Purchase Warranty Days
+  </div>
   <mat-form-field>
     <input
       matInput
