feat(rma-frontend): disable sale return and credit note tabs  if campagin invoice check

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
@@ -14,7 +14,11 @@
 <ion-content class="page-background">
   <ion-card>
     <ion-card-header class="ion-no-padding">
-      <ion-segment [(ngModel)]="selectedSegment" scrollable="true" class="disable-scrollbars">
+      <ion-segment
+        [(ngModel)]="selectedSegment"
+        scrollable="true"
+        class="disable-scrollbars"
+      >
         <ion-segment-button value="0">
           <ion-label>Details</ion-label>
         </ion-segment-button>
@@ -26,7 +30,8 @@
         </ion-segment-button>
         <ion-segment-button
           value="3"
-          *ngIf="sales_invoice_name && deliveryItemCount !== 0 && !isCampaign"
+          disabled="{{isCampaign ? true : false }}"
+          *ngIf="sales_invoice_name && deliveryItemCount !== 0"
         >
           <ion-label>Sales Return</ion-label>
         </ion-segment-button>
@@ -35,7 +40,8 @@
         </ion-segment-button>
         <ion-segment-button
           value="5"
-          *ngIf="sales_invoice_name && deliveryItemCount !== 0 && !isCampaign"
+          disabled="{{isCampaign ? true : false }}"
+          *ngIf="sales_invoice_name && deliveryItemCount !== 0"
         >
           <ion-label>Credit Notes</ion-label>
         </ion-segment-button>
