--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -91,15 +91,12 @@
         <ion-row>
           <ion-col size="6">
             <mat-form-field class="full-width">
-              <mat-label>Status</mat-label>
+              <mat-label> Campaign Invoice</mat-label>
               <mat-select
                 [(value)]="campaign"
                 (selectionChange)="statusOfCampaignChange($event.value)"
               >
-                <mat-option
-                  *ngFor="let status of campaignStatus"
-                  [value]="status"
-                >
+                <mat-option *ngFor="let  of campaignStatus" [value]="status">
                   {{status}}
                 </mat-option>
               </mat-select>
