chore(rma-server): fix docker entrypoint

--- a/packages/rma-server/docker/env.tmpl
+++ b/packages/rma-server/docker/env.tmpl
@@ -5,3 +5,4 @@ DB_PASSWORD=${DB_PASSWORD}
 CACHE_DB_NAME=${CACHE_DB_NAME}
 CACHE_DB_PASSWORD=${CACHE_DB_PASSWORD}
 CACHE_DB_USER=${CACHE_DB_USER}
+NODE_ENV=${NODE_ENV}
