feat(): Added date field in sales invoice

--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -159,7 +159,7 @@
         </ng-container>
         <!-- posting_date Column -->
         <ng-container matColumnDef="posting_date">
-          <mat-header-cell mat-sort-header="posting_date" *matHeaderCellDef>
+          <mat-header-cell mat-sort-header="created_on" *matHeaderCellDef>
             Date
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
