feat(): Added date field in purchase invoice

--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
@@ -112,7 +112,7 @@
         </ng-container>
 
         <ng-container matColumnDef="date">
-          <mat-header-cell *matHeaderCellDef mat-sort-header="posting_date">
+          <mat-header-cell *matHeaderCellDef mat-sort-header="created_on">
             Date
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
