--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -106,7 +106,7 @@
             <ion-textarea
               readonly="true"
               placeholder="Remark"
-              rows="1"
+              value="{{ salesInvoiceDetails?.remarks }}"
             ></ion-textarea>
           </ion-item>
         </ion-col>
