--- a/packages/rma-frontend/src/app/warranty-ui/warranty/warranty.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/warranty/warranty.page.html
@@ -140,137 +140,169 @@
               matSort
               aria-label="Elements"
               style="width: 100%;"
+              [dataSource]="dataSource"
+              (matSortChange)="setFilter($event)"
             >
               <ng-container matColumnDef="claim_no">
-                <th mat-header-cell *matHeaderCellDef>
-                  Claim No
-                </th>
-                <td mat-cell *matCellDef="let item">
-                  {{item.claim_no}}
-                </td>
+                <mat-header-cell *matHeaderCellDef>
+                  Claim no
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.claim_no}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
 
               <ng-container matColumnDef="claim_type">
-                <th mat-header-cell *matHeaderCellDef>
+                <mat-header-cell *matHeaderCellDef>
                   Claim Type
-                </th>
-                <td mat-cell *matCellDef="let row">
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
                   {{row.claim_type}}
-                </td>
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
 
               <ng-container matColumnDef="received_date">
-                <th mat-header-cell *matHeaderCellDef>
+                <mat-header-cell *matHeaderCellDef>
                   Received Date
-                </th>
-                <td mat-cell *matCellDef="let row">
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
                   {{row.received_date}}
-                </td>
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
 
               <ng-container matColumnDef="deliver_date">
-                <th mat-header-cell *matHeaderCellDef>
+                <mat-header-cell *matHeaderCellDef>
                   Deliver Date
-                </th>
-                <td mat-cell *matCellDef="let row">
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
                   {{row.deliver_date}}
-                </td>
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
 
               <ng-container matColumnDef="customer_third_party">
-                <th
-                  mat-header-cell
-                  mat-sort-header="posting_date"
-                  *matHeaderCellDef
-                >
-                  Customer / Third Party
-                </th>
-                <td mat-cell *matCellDef="let row">
+                <mat-header-cell *matHeaderCellDef>
+                  Customer Third Party
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
                   {{row.customer_third_party}}
-                </td>
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
 
-              <ng-container matColumnDef="item">
-                <th mat-header-cell *matHeaderCellDef>
+              <ng-container matColumnDef="item_code">
+                <mat-header-cell *matHeaderCellDef>
                   Item
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.item}}
-                </td>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.item_code}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
 
               <ng-container matColumnDef="claimed_serial">
-                <th mat-header-cell *matHeaderCellDef>Claimed Serial</th>
-                <td mat-cell *matCellDef="let row">
+                <mat-header-cell *matHeaderCellDef>
+                  Claimed Serial
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
                   {{row.claimed_serial}}
-                </td>
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="invoice_no">
+                <mat-header-cell *matHeaderCellDef>
+                  Invoice No
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.invoice_no}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
 
               <ng-container matColumnDef="service_charge">
-                <th mat-header-cell *matHeaderCellDef>
-                  Invoice No
-                </th>
-                <td mat-cell *matCellDef="let row">
+                <mat-header-cell *matHeaderCellDef>
+                  Service Charge
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
                   {{row.service_charge}}
-                </td>
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
 
               <ng-container matColumnDef="claim_status">
-                <th mat-header-cell *matHeaderCellDef>
-                  Service Charge
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.claim_status}}
-                </td>
-              </ng-container>
-              <ng-container matColumnDef="warranty_status">
-                <th mat-header-cell *matHeaderCellDef>
+                <mat-header-cell *matHeaderCellDef>
                   Claim Status
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.warranty_status}}
-                </td>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.claim_status}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
-              <ng-container matColumnDef="receiving_branch">
-                <th mat-header-cell *matHeaderCellDef>
+
+              <ng-container matColumnDef="warranty_status">
+                <mat-header-cell *matHeaderCellDef>
                   Warranty Status
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.receiving_branch}}
-                </td>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.warranty_status}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
-              <ng-container matColumnDef="delivery_branch">
-                <th mat-header-cell *matHeaderCellDef>
+
+              <ng-container matColumnDef="receiving_branch">
+                <mat-header-cell *matHeaderCellDef>
                   Receiving Branch
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.delivery_branch}}
-                </td>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.receiving_branch}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
-              <ng-container matColumnDef="received_by">
-                <th mat-header-cell *matHeaderCellDef>
+
+              <ng-container matColumnDef="delivery_branch">
+                <mat-header-cell *matHeaderCellDef>
                   Delivery Branch
-                </th>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.delivery_branch}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
-              <ng-container matColumnDef="delivered_by">
-                <th mat-header-cell *matHeaderCellDef>
+
+              <ng-container matColumnDef="received_by">
+                <mat-header-cell *matHeaderCellDef>
                   Received By
-                </th>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.received_by}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
-              <ng-container matColumnDef="invoice_no">
-                <th mat-header-cell *matHeaderCellDef>
+
+              <ng-container matColumnDef="delivered_by">
+                <mat-header-cell *matHeaderCellDef>
                   Delivered by
-                </th>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  {{row.delivered_by}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
               </ng-container>
-              <tr
-                mat-header-row
+              <mat-header-row
                 *matHeaderRowDef="displayedColumns; sticky: true"
-              ></tr>
-              <tr
-                mat-row
+              ></mat-header-row>
+
+              <mat-row
                 *matRowDef="let row; columns: displayedColumns;"
-                (click)="navigateBasedOnRoles(row)"
-              ></tr>
+              ></mat-row>
+              <mat-footer-row
+                class="footer"
+                *matFooterRowDef="displayedColumns; sticky: true"
+              ></mat-footer-row>
             </table>
 
             <mat-card-actions>
