feat : Added fromDate , toDate range filter in SI

--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -51,24 +51,6 @@
           </ion-col>
           <ion-col>
             <mat-form-field class="full-width">
-              <mat-label>Status</mat-label>
-              <mat-select
-                [(value)]="status"
-                (selectionChange)="statusChange($event.value)"
-              >
-                <mat-option
-                  *ngFor="let status of invoiceStatus"
-                  [value]="status"
-                >
-                  {{status}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <mat-form-field class="full-width">
               <input
                 matInput
                 placeholder="Customer"
@@ -105,6 +87,69 @@
               </mat-select>
             </mat-form-field>
           </ion-col>
+          <ion-col>
+            <mat-form-field class="full-width">
+              <mat-label>Status</mat-label>
+              <mat-select
+                [(value)]="status"
+                (selectionChange)="statusChange($event.value)"
+              >
+                <mat-option
+                  *ngFor="let status of invoiceStatus"
+                  [value]="status"
+                >
+                  {{status}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <mat-form-field class="full-width">
+              <input
+                matInput
+                [matDatepicker]="fromDate"
+                placeholder="From Date"
+                readonly
+                [formControl]="fromDateFormControl"
+                (dateChange)="dateFilter()"
+              />
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="fromDate"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #fromDate disabled="false"></mat-datepicker>
+            </mat-form-field>
+          </ion-col>
+          <ion-col>
+            <mat-form-field class="full-width">
+              <input
+                matInput
+                [matDatepicker]="toDate"
+                placeholder="To Date"
+                readonly
+                [formControl]="toDateFormControl"
+                (dateChange)="dateFilter()"
+              />
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="toDate"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #toDate disabled="false"></mat-datepicker>
+            </mat-form-field>
+          </ion-col>
+          <ion-row>
+            <ion-col size="auto">
+              <ion-button
+                color="tertiary"
+                (click)="clearFilters()"
+                fill="outline"
+              >
+                Clear
+              </ion-button>
+            </ion-col>
+          </ion-row>
         </ion-row>
       </ion-grid>
       <table
