fix(rma-frontend): Fixed paginated item listing on add sales invoice

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -245,6 +245,7 @@
                 (closed)="updateItem(row, $event)"
               >
                 <inline-edit
+                  style="width: 400px !important;"
                   [value]="row.item_name"
                   column="item"
                   [minimumPrice]="row.minimumPrice"
