--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -84,6 +84,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
+              oninput="this.value = this.value.toUpperCase()"
               placeholder="From Range"
               type="text"
               name="From Range"
@@ -95,6 +96,7 @@
           <mat-form-field class="example-full-width">
             <input
               type="text"
+              oninput="this.value = this.value.toUpperCase()"
               matInput
               placeholder="To Range"
               type="string"
@@ -217,6 +219,7 @@
         <mat-header-cell *matHeaderCellDef>Serials</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <input
+            oninput="this.value = this.value.toUpperCase()"
             *ngIf="row.serial_no.length === 1 ? true : false"
             [(ngModel)]="row.serial_no[0]"
           />
