--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.scss
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.scss
@@ -2,3 +2,14 @@
   width: 100%;
   color: black;
 }
+
+.fab-position {
+  position: absolute;
+  top: 25px;
+  right: 0;
+}
+
+.cancel {
+  color: red;
+  background-color: red !important;
+}
