fix(rma-frontend): Minor UI fixes

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -303,8 +303,8 @@
       </ion-text>
     </ion-card-title>
   </ion-card-header>
-  <ion-card-content class="ion-padding">
-    <div class="search-models">
+  <ion-card-content class="ion-no-padding">
+    <div class="search-models ion-padding">
       <mat-form-field class="mat-input-wrapper">
         <input
           matInput
