--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -8,7 +8,7 @@
   <ion-fab-button class="fab-position">
     <ion-icon name="lock-closed-outline"></ion-icon>
   </ion-fab-button>
-  <ion-fab-list side="start">
+  <ion-fab-list side="start" class="fab-position">
     <ion-button color="danger" (click)="rejectSalesInvoice()">
       Reject
     </ion-button>
