feat(rma-frontend): warranty tabs added

--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
@@ -116,7 +116,7 @@
             Date
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
-            {{row.posting_date}}
+            {{row.posting_date | date:'dd-MM-yyyy'}}
           </mat-cell>
         </ng-container>
 
