feat(rma-frontend): resolved changes

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
@@ -1,14 +1,16 @@
 <ion-card>
   <ion-card-header>
-    <ion-row>
-      <ion-col class="ion-text-left">
-        <ion-card-title>
-          <ion-text color="tertiary">
-            Service Invoice
-          </ion-text>
-        </ion-card-title>
-      </ion-col>
-    </ion-row>
+    <ion-grid>
+      <ion-row>
+        <ion-col class="ion-text-left">
+          <ion-card-title>
+            <ion-text color="tertiary">
+              Service Invoice
+            </ion-text>
+          </ion-card-title>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding">
