--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -1,15 +1,17 @@
 <!-- 1 this is for list -->
 <ion-card>
   <ion-card-header>
-    <ion-row>
-      <ion-col class="ion-text-left">
-        <ion-card-title>
-          <ion-text color="tertiary">
-            Status History
-          </ion-text>
-        </ion-card-title>
-      </ion-col>
-    </ion-row>
+    <ion-grid>
+      <ion-row>
+        <ion-col class="ion-text-left">
+          <ion-card-title>
+            <ion-text color="tertiary">
+              Status History
+            </ion-text>
+          </ion-card-title>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding">
