feat(rma-frontend): remove unwanted variables

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
@@ -200,7 +200,7 @@
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding">
-    <mat-table #table [dataSource]="dataSource" style="width: 100%;">
+    <mat-table #table style="width: 100%;">
       <ng-container matColumnDef="warranty_status">
         <mat-header-cell *matHeaderCellDef>Warranty Status</mat-header-cell>
         <mat-cell *matCellDef="let row">
