--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
@@ -14,7 +14,7 @@
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding">
-    <mat-table #table [dataSource]="dataSource" style="width: 100%;">
+    <mat-table #table style="width: 100%;">
       <ng-container matColumnDef="invoice_no">
         <mat-header-cell *matHeaderCellDef>Invoice No</mat-header-cell>
         <mat-cell *matCellDef="let row">
