--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
@@ -12,7 +12,7 @@
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding">
-    <mat-table #table [dataSource]="dataSource" style="width: 100%;">
+    <mat-table #table style="width: 100%;">
       <ng-container matColumnDef="stock_voucher_number">
         <mat-header-cell *matHeaderCellDef
           >Stock Voucher Number</mat-header-cell
