--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
@@ -5,22 +5,22 @@
         <ion-col>
           <ion-item lines="none">
             <ion-label position="floating">Serial Number</ion-label>
-            <ion-input
-              placeholder="Serial Number"
-              readonly="true"
-              type="string"
-              value="{{
-                warrantyClaimsDetails?.serial_no
-                  ? warrantyClaimsDetails.serial_no
-                  : ''
-              }}"
-            ></ion-input>
+            <ion-input placeholder="Serial Number" readonly="true"></ion-input>
           </ion-item>
         </ion-col>
         <ion-col>
           <ion-item lines="none">
             <ion-label position="floating">Claim Type</ion-label>
-            <ion-input placeholder="Claim Type" type="text"></ion-input>
+            <ion-input
+              placeholder="Claim Type"
+              readonly="true"
+              type="string"
+              value="{{
+                warrantyClaimsDetails?.claim_type
+                  ? warrantyClaimsDetails.claim_type
+                  : ''
+              }}"
+            ></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -117,7 +117,13 @@
             <ion-label position="floating">Receive Date & Time</ion-label>
             <ion-input
               placeholder="Receive Date & Time"
-              type="text"
+              readonly="true"
+              type="string"
+              value="{{
+                warrantyClaimsDetails?.received_date
+                  ? warrantyClaimsDetails.received_date
+                  : ''
+              }}"
             ></ion-input>
           </ion-item>
         </ion-col>
@@ -125,8 +131,14 @@
           <ion-item lines="none">
             <ion-label position="floating">Deliver Date & Time</ion-label>
             <ion-input
-              placeholder="Deliver Date & Time"
-              type="text"
+              placeholder="Receive Date & Time"
+              readonly="true"
+              type="string"
+              value="{{
+                warrantyClaimsDetails?.deliver_date
+                  ? warrantyClaimsDetails.deliver_date
+                  : ''
+              }}"
             ></ion-input>
           </ion-item>
         </ion-col>
@@ -136,7 +148,16 @@
         <ion-col>
           <ion-item lines="none">
             <ion-label position="floating">Receiving Branch</ion-label>
-            <ion-input placeholder="Receiving Branch" type="text"></ion-input>
+            <ion-input
+              placeholder="Delivery Branch"
+              readonly="true"
+              type="string"
+              value="{{
+                warrantyClaimsDetails?.receiving_branch
+                  ? warrantyClaimsDetails.receiving_branch
+                  : ''
+              }}"
+            ></ion-input>
           </ion-item>
         </ion-col>
         <ion-col>
@@ -151,7 +172,16 @@
         <ion-col>
           <ion-item lines="none">
             <ion-label position="floating">Delivery Branch</ion-label>
-            <ion-input placeholder="Delivery Branch" type="text"></ion-input>
+            <ion-input
+              placeholder="Delivery Branch"
+              readonly="true"
+              type="string"
+              value="{{
+                warrantyClaimsDetails?.delivery_branch
+                  ? warrantyClaimsDetails.delivery_branch
+                  : ''
+              }}"
+            ></ion-input>
           </ion-item>
         </ion-col>
         <ion-col>
