feat(rma-frontend): replace string by text

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
@@ -14,7 +14,7 @@
             <ion-input
               placeholder="Claim Type"
               readonly="true"
-              type="string"
+              type="text"
               value="{{
                 warrantyClaimsDetails?.claim_type
                   ? warrantyClaimsDetails.claim_type
@@ -118,7 +118,7 @@
             <ion-input
               placeholder="Receive Date & Time"
               readonly="true"
-              type="string"
+              type="text"
               value="{{
                 warrantyClaimsDetails?.received_date
                   ? warrantyClaimsDetails.received_date
@@ -133,7 +133,7 @@
             <ion-input
               placeholder="Receive Date & Time"
               readonly="true"
-              type="string"
+              type="text"
               value="{{
                 warrantyClaimsDetails?.deliver_date
                   ? warrantyClaimsDetails.deliver_date
@@ -151,7 +151,7 @@
             <ion-input
               placeholder="Delivery Branch"
               readonly="true"
-              type="string"
+              type="text"
               value="{{
                 warrantyClaimsDetails?.receiving_branch
                   ? warrantyClaimsDetails.receiving_branch
@@ -175,7 +175,7 @@
             <ion-input
               placeholder="Delivery Branch"
               readonly="true"
-              type="string"
+              type="text"
               value="{{
                 warrantyClaimsDetails?.delivery_branch
                   ? warrantyClaimsDetails.delivery_branch
