feat(rma-frontend): claim creation form created in warranty

--- a/packages/rma-frontend/src/app/warranty-ui/warranty/warranty.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/warranty/warranty.page.html
@@ -23,6 +23,14 @@
                   </ion-text>
                 </ion-card-title>
               </ion-col>
+              <ion-col class="ion-text-right">
+                <ion-button
+                  color="tertiary"
+                  [routerLink]="['/warranty/add-warranty-claim', 'add']"
+                >
+                  Add
+                </ion-button>
+              </ion-col>
             </ion-row>
           </ion-card-header>
 
