--- a/packages/rma-frontend/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -38,96 +38,96 @@
             <ion-grid class="page-background">
               <ion-row class="page-background">
                 <ion-col class="page-background">
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Serial Number" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Claim Type" />
                   </mat-form-field>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="INV No" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Warranty End Date" />
                   </mat-form-field>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Product Name" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Product Brand" />
                   </mat-form-field>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Customer Name" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Third Pary Name" />
                   </mat-form-field>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Customer Contact" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Third Party Contact" />
                   </mat-form-field>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Customer Address" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Third Party Address" />
                   </mat-form-field>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Receive Date & Time" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Deliver Date" />
                   </mat-form-field>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Receiving Branch" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <mat-label>problem</mat-label>
                     <mat-select [formControl]="problem" multiple>
                       <mat-select-trigger>
@@ -151,19 +151,19 @@
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Delivery Branch" />
                   </mat-form-field>
                 </ion-col>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Additional Receive/Remarks" />
                   </mat-form-field>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <mat-form-field class="full-width">
+                  <mat-form-field>
                     <input matInput placeholder="Problem Details" />
                   </mat-form-field>
                 </ion-col>
