feat: Added delivered_items_map and removed delivery_note_items from listing SI endpoint

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -290,12 +290,7 @@
   </ion-card-content>
 </ion-card>
 
-<ion-card
-  *ngIf="
-    salesInvoiceDetails &&
-    salesInvoiceDetails?.delivery_note_items?.length !== 0
-  "
->
+<ion-card *ngIf="salesInvoiceDetails && !disableDeliveredSerialsCard">
   <ion-card-header>
     <ion-card-title>
       <ion-text color="tertiary">
