--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
@@ -31,7 +31,7 @@
         <ion-segment-button
           value="3"
           disabled="{{isCampaign ? true : false }}"
-          *ngIf="sales_invoice_name && deliveryItemCount !== 0"
+          *ngIf="sales_invoice_name && showReturnTab"
         >
           <ion-label>Sales Return</ion-label>
         </ion-segment-button>
@@ -41,7 +41,7 @@
         <ion-segment-button
           value="5"
           disabled="{{isCampaign ? true : false }}"
-          *ngIf="sales_invoice_name && deliveryItemCount !== 0"
+          *ngIf="sales_invoice_name && showReturnTab"
         >
           <ion-label>Credit Notes</ion-label>
         </ion-segment-button>
