--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -58,6 +58,15 @@
               <ion-label>Warranty</ion-label>
             </ion-item>
             <ion-item
+              *ngIf="loggedIn"
+              routerLink="/stock-entry"
+              lines="none"
+              routerLinkActive="active"
+            >
+              <ion-icon slot="start" name="git-compare-outline"></ion-icon>
+              <ion-label>Stock Entry</ion-label>
+            </ion-item>
+            <ion-item
               *ngIf="loggedIn && showSettings"
               (click)="isSettingMenuVisible = !isSettingMenuVisible"
               routerLink="/settings"
