feat: Added purchase item map in Purchase invoice, and disabled unlimited PR creation

--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.scss
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.scss
@@ -64,3 +64,9 @@ mat-cell {
   display: flex;
   justify-content: center;
 }
+
+.fab-position {
+  position: absolute;
+  top: 25px;
+  right: 0;
+}
