--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -1,9 +1,15 @@
-<ion-fab vertical="top" horizontal="end" slot="fixed" class="ion-margin-end">
+<ion-fab
+  *ngIf="filteredItemList.length !== 0"
+  vertical="top"
+  horizontal="end"
+  slot="fixed"
+  class="ion-margin-end"
+>
   <ion-fab-button class="fab-position" (click)="submitPurchaseReceipt()">
     <ion-icon name="lock-closed-outline"></ion-icon>
   </ion-fab-button>
 </ion-fab>
-<ion-card>
+<ion-card *ngIf="filteredItemList.length !== 0">
   <ion-card-content>
     <ion-grid class="ion-no-padding">
       <ion-row class="align">
@@ -73,7 +79,7 @@
   </ion-card-content>
 </ion-card>
 
-<ion-card>
+<ion-card *ngIf="filteredItemList.length !== 0">
   <ion-card-header>
     <ion-card-title>Serial Range</ion-card-title>
   </ion-card-header>
@@ -116,7 +122,7 @@
   </ion-card-content>
 </ion-card>
 
-<ion-card>
+<ion-card *ngIf="filteredItemList.length !== 0">
   <ion-card-content>
     <ion-card-title>Products</ion-card-title>
     <mat-table #table [dataSource]="itemDataSource" style="width: 100%;">
@@ -184,7 +190,7 @@
   </ion-card-content>
 </ion-card>
 
-<ion-card>
+<ion-card *ngIf="filteredItemList.length !== 0">
   <ion-card-content>
     <ion-card-title>Serials</ion-card-title>
     <mat-table #table [dataSource]="serialDataSource" style="width: 100%;">
@@ -247,3 +253,16 @@
     </mat-table>
   </ion-card-content>
 </ion-card>
+
+<ion-grid
+  class="ion-no-padding"
+  *ngIf="purchaseInvoiceDetails && filteredItemList.length === 0"
+>
+  <ion-row>
+    <ion-col>
+      <ion-text class="ion-text-center" style="color: black;">
+        <h1>All serial already assigned</h1>
+      </ion-text>
+    </ion-col>
+  </ion-row>
+</ion-grid>
